tests/reject/unknown_type.hi
# both compilers must reject a reference to an undefined type name.
fn f(v: cool) -> int:
    return 0
fn main():
    print("x")
